--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                ].join();
        return r.path(path);
     })()); 
-    mountains[0].attr({fill: "white", stroke: "gray", "stroke-dasharray": "- ."});
-    mountains[1].attr({fill: "#CCC", stroke: "gray", "stroke-dasharray": "." });
-    mountains[2].attr({fill: "#DDD", stroke: "gray", "stroke-dasharray": "-"});
+    //mountains[0].attr({fill: "white", stroke: "gray", "stroke-dasharray": "- ."});
+    //mountains[1].attr({fill: "#CCC", stroke: "gray", "stroke-dasharray": "." });
+    //mountains[2].attr({fill: "#DDD", stroke: "gray", "stroke-dasharray": "-"});
    })();
   </script>
 <!--end of js -->
